k8s/deployment-frontend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels: 
        app: frontend
    spec:
      containers:
        - name: chatapp-frontend
          image: rocketboies/chatapp-frontend:latest
          ports:
          - containerPort: 80
