k8s/mogodb-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
